--- a/src/components/DistrictContainer/DistrictContainer.css
+++ b/src/components/DistrictContainer/DistrictContainer.css
@@ -3,7 +3,7 @@
   display: -ms-flexbox;
   display: flex;
   -ms-flex-pack: justify;
-  justify-content: space-between;
+  justify-content: space-around;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
 }
