--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,1 +1,24 @@
 /*APP COMPONENT RELATED CSS GOES HERE*/
+div {    
+  text-align: center;
+  font-family: 'Crimson Text', serif;
+  background-attachment: fixed;
+  background-image: url('http://backgroundcheckall.com/wp-content/uploads/2017/12/white-gray-background-5.jpg')
+}
+
+#root {
+  min-height: 100vh;
+}
+
+body::-webkit-scrollbar {
+  width: 1em;
+}
+
+body::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 15px rgba(0,0,0,0.3);
+}
+
+body::-webkit-scrollbar-thumb {
+background-color: #416387;
+outline: 1px solid #416387;
+}
