--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -1,8 +1,9 @@
 input {
   border: 5px solid white;
-  box-shadow: inset 0 0 8px rgba(64, 98, 135, 0.34), 0 0 16px rgba(64, 98, 135, 0.23);
+  box-shadow: inset 0 0 8px rgba(64, 98, 135, 0.34),
+    0 0 16px rgba(64, 98, 135, 0.23);
   padding: 10px;
-  background: rgba(255,255,255,0.5);
+  background: rgba(255, 255, 255, 0.5);
   margin: 0 0 10px 0;
   font-size: 2.5vh;
   margin: auto;
@@ -16,16 +17,15 @@ input {
   box-shadow: 2px 2px 2px gainsboro;
   height: 26vh;
   padding-top: 3vh;
-
 }
 
 h1 {
   color: #416387;
   font-size: 6vh;
   text-shadow: 2px 2px white;
-  margin-top:0 
+  margin-top: 0;
 }
 
-input:focus{
+input:focus {
   outline: none;
 }
