--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,9 +1,9 @@
 /*APP COMPONENT RELATED CSS GOES HERE*/
-div {    
+div {
   text-align: center;
   font-family: 'Crimson Text', serif;
   background-attachment: fixed;
-  background-image: url('http://backgroundcheckall.com/wp-content/uploads/2017/12/white-gray-background-5.jpg')
+  background-image: url('http://backgroundcheckall.com/wp-content/uploads/2017/12/white-gray-background-5.jpg');
 }
 
 #root {
@@ -15,10 +15,10 @@ body::-webkit-scrollbar {
 }
 
 body::-webkit-scrollbar-track {
-  -webkit-box-shadow: inset 0 0 15px rgba(0,0,0,0.3);
+  -webkit-box-shadow: inset 0 0 15px rgba(0, 0, 0, 0.3);
 }
 
 body::-webkit-scrollbar-thumb {
-background-color: #416387;
-outline: 1px solid #416387;
+  background-color: #416387;
+  outline: 1px solid #416387;
 }
