--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -12,12 +12,12 @@
   cursor: pointer;
   width: 20%;
   margin: 2%;
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
 }
 
 .card:hover {
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 }
 
 .card li {
@@ -40,4 +40,3 @@
   margin-top: 7.2px;
   box-shadow: 1px 1px #1f1010;
 }
-
