--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -6,6 +6,10 @@
   color: red;
 }
 
+.selectedCard {
+  box-shadow: 0 8px 8px 0 rgba(102, 0, 0, 0.2);
+}
+
 .card {
   border-radius: 10px;
   border: 1px solid grey;
@@ -14,6 +18,14 @@
   margin: 2%;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
+  background-color: #ffffff63;
+  animation-duration: 2s;
+  animation-name:card-opacity;
+}
+
+@keyframes card-opacity {
+  from {opacity: .7};
+  to {opacity: 1}
 }
 
 .card:hover {
