--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -14,7 +14,8 @@
   border-radius: 10px;
   border: 1px solid grey;
   cursor: pointer;
-  width: 20%;
+  width: 40vh;
+  max-height: 50vh;
   margin: 2%;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
