--- a/src/components/ComparisonCard/ComparisonCard.css
+++ b/src/components/ComparisonCard/ComparisonCard.css
@@ -3,8 +3,9 @@
   background-color: #406287;
   border: 1px solid #e7ecefad;
   cursor: pointer;
-  width: 20%;
+  width: 40vh;
   margin: 2%;
+  max-height: 50vh;
   -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   box-shadow: 0 4px 8px 0 rgb(162, 168, 171);
   -webkit-transition: 0.3s;
