Add Media Query and style to comparison Card

--- a/src/components/ComparisonCard/ComparisonCard.css
+++ b/src/components/ComparisonCard/ComparisonCard.css
@@ -18,3 +18,12 @@
   color: white;
   padding-top: 10vh;
 }
+
+.comparisonCard h3 {
+  font-size: 3vh;
+  color: black;
+  background-color: #efd9df;
+  padding: 2vh;
+  margin-top: 10vh;
+  border: 1px solid white;
+}
