--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -68,3 +68,16 @@
 .clicked:hover {
   box-shadow: 1px 1px red;
 }
+
+@media only screen and (max-width: 400px) {
+
+    .card li {
+      padding-left: 5px;
+      margin: auto;
+      text-align: justify;
+      text-align: center;
+      width: auto;
+    }
+}
+
+
